fix: several fixes and improvements